[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
bs4 = "^0.0.1"
geonamescache = "^1.2.0"
replit = "^3.1.0"
coloredlogs = "^15.0.1"
schedule = "^1.1.0"
[tool.poetry.dev-dependencies]
